--- a/index.html
+++ b/index.html
@@ -1,8 +1,54 @@
-<HTML>
+<HTML amp='amp'>
 <head>
+<meta charset='utf-8'/>
+<meta content='width=device-width,minimum-scale=1,initial-scale=1' name='viewport'/>
+<meta content='IE=9; IE=8; IE=7; IE=EDGE; chrome=1' http-equiv='X-UA-Compatible'/>
 <title>KENCANA Sound System - Brebes</title>
+<meta content='#555555' name='theme-color'/>
+<meta content='#55555' name='msapplication-navbutton-color'/>
+<link href='https://kencanabrebes.github.io/soundsystem/' rel='canonical'/>
+<link href='https://kencanabrebes.github.io/soundsystem/' hreflang='x-default' rel='alternate'/>
+<link href='XXXXXXXXX/manifest.json' rel='manifest'/>
+<link href='XXXX16XXXXX' rel='icon' type='image/x-icon'/>
+<link href='XXXXXXXXX' rel='icon' sizes='32x32'/>
+<link href='XXXXXXXXX' rel='icon' sizes='192x192'/>
+<link href='XXXX180XXXXX' rel='apple-touch-icon-precomposed'/>
+<meta content='XXXX144XXXXX' name='msapplication-TileImage'/>
+<meta content='XXXXXXXXX' name='description'/>
+<meta content='website' property='og:type'/>
+<meta content='XXXXXXXXX' property='og:description'/>
+<meta content='XXXXXXXXX' property='og:image'/>
+<meta content='158' property='og:image:width'/>
+<meta content='158' property='og:image:height'/>
+<meta content='KENCANA Brebes' name='Author'/>
+<meta content='KENCANA Sound System - Brebes' property='og:image:alt'/>
+<meta content='KENCANA Sound System - Brebes' property='og:site_name'/>
+<meta content='KENCANA Sound System - Brebes' property='og:title'/>
+<meta content='KENCANA Sound System - Brebes' name='twitter:site'/>
+<meta content='summary_large_image' name='twitter:card'/>
+<script type='application/ld+json'>
+{
+  "@context": "http://schema.org",
+  "@type": "WebSite",
+  "url": "https://kencanabrebes.github.io/soundsystem/",
+  "potentialAction": {
+    "@type": "SearchAction",
+    "target": "https://kencanabrebes.github.io/soundsystem/search?q={q}",
+    "query-input": "required name=q"
+  }
+}
+</script>
+  
+<style amp-custom='amp-custom'>
+</style>
+<style amp-boilerplate='amp-boilerplate'>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate='amp-boilerplate'>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
+<script async='async' src='https://cdn.ampproject.org/v0.js'></script>  
 </head>
+
 <body>
+<header>
+  </header>
+<div id='gambar'><img src='https://kencanabrebes.github.io/soundsystem/kencanasoundsystem%20.png'/></div>
 cek page
 </body>
 </HTML>
