--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<HTML ⚡ lang="en">
+<!DOCTYPE html>
+<HTML ⚡ lang="id">
 <head>
 <meta charset='utf-8'/>
 <meta content='width=device-width,minimum-scale=1,initial-scale=1' name='viewport'/>
