--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <body>
 <header>
   </header>
-<div id='gambar'><img src='https://kencanabrebes.github.io/soundsystem/kencanasoundsystem%20.png'/></div>
+<div id='gambar'><amp-img src='https://kencanabrebes.github.io/soundsystem/kencanasoundsystem%20.png' width='1000' height='446' layout='responsive' /></div>
 cek page
 </body>
 </HTML>
