--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <meta content='XXXX144XXXXX' name='msapplication-TileImage'/>
 <meta content='XXXXXXXXX' name='description'/>
 <meta content='website' property='og:type'/>
-<meta content='XXXXXXXXX' property='og:description'/>
+<meta content='Penyewaan Sound System, Panggung, Lighting ' property='og:description'/>
 <meta content='XXXXXXXXX' property='og:image'/>
 <meta content='158' property='og:image:width'/>
 <meta content='158' property='og:image:height'/>
@@ -39,15 +39,16 @@
   }
 }
 </script>
-  
-<style amp-custom='amp-custom'>
-</style>
 <style amp-boilerplate='amp-boilerplate'>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate='amp-boilerplate'>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
-<script async='async' src='https://cdn.ampproject.org/v0.js'></script>  
+<script async='async' src='https://cdn.ampproject.org/v0.js'></script>   
+<style amp-custom='amp-custom'>
+  header{background:#fff;position:fixed;top:0;width:100%;right:0;left:0;}
+</style>
 </head>
 
 <body>
 <header>
+  <amp-img src='https://kencanabrebes.github.io/soundsystem/header_kencanasoundsystem.png' width='160' height='50' layout='responsive'/>
   </header>
 <div id='gambar'><amp-img src='https://kencanabrebes.github.io/soundsystem/kencanasoundsystem%20.png' width='1000' height='446' layout='responsive' /></div>
 cek page
