--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 <style amp-custom='amp-custom'>
   header{background:#fbfbfb;position:fixed;top:0;width:100%;right:0;left:0;z-index: 99999;padding: 10px 18px;box-shadow: 0 1px 3px #555;}
   header amp-img{max-width: 160px;}
+  #gambar{margin: 70px auto 0;}
 </style>
 </head>
 
