--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <meta content='#55555' name='msapplication-navbutton-color'/>
 <link href='https://kencanabrebes.github.io/soundsystem/' rel='canonical'/>
 <link href='https://kencanabrebes.github.io/soundsystem/' hreflang='x-default' rel='alternate'/>
-<link href='XXXXXXXXX/manifest.json' rel='manifest'/>
-<link href='XXXX16XXXXX' rel='icon' type='image/x-icon'/>
-<link href='XXXXXXXXX' rel='icon' sizes='32x32'/>
-<link href='XXXXXXXXX' rel='icon' sizes='192x192'/>
-<link href='XXXX180XXXXX' rel='apple-touch-icon-precomposed'/>
-<meta content='XXXX144XXXXX' name='msapplication-TileImage'/>
+<link href='https://kencanabrebes.github.io/soundsystem/manifest.json' rel='manifest'/>
+<link href='https://kencanabrebes.github.io/soundsystem/KENCANA_Soundsystem_favicon16.png' rel='icon' type='image/x-icon'/>
+<link href='https://kencanabrebes.github.io/soundsystem/KENCANA_Soundsystem_favicon32.png' rel='icon' sizes='32x32'/>
+<meta content='https://kencanabrebes.github.io/soundsystem/KENCANA_Soundsystem_favicon144.png' name='msapplication-TileImage'/>
+<link href='https://kencanabrebes.github.io/soundsystem/KENCANA_Soundsystem_favicon180.png' rel='apple-touch-icon-precomposed'/>
+<link href='https://kencanabrebes.github.io/soundsystem/KENCANA_Soundsystem_favicon192.png' rel='icon' sizes='192x192'/>
 <meta content='XXXXXXXXX' name='description'/>
 <meta content='website' property='og:type'/>
 <meta content='Penyewaan Sound System, Panggung, Lighting ' property='og:description'/>
