--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 <meta content='https://kencanabrebes.github.io/soundsystem/KENCANA_Soundsystem_favicon144.png' name='msapplication-TileImage'/>
 <link href='https://kencanabrebes.github.io/soundsystem/KENCANA_Soundsystem_favicon180.png' rel='apple-touch-icon-precomposed'/>
 <link href='https://kencanabrebes.github.io/soundsystem/KENCANA_Soundsystem_favicon192.png' rel='icon' sizes='192x192'/>
-<meta content='XXXXXXXXX' name='description'/>
+<meta content='Jasa Penyewaan Sound System, Panggung, Lighting, Perlengkapan Hajatan Dan Pengantin - Brebes.' name='description'/>
+<meta content='Jasa Penyewaan Sound System, Panggung, Lighting, Perlengkapan Hajatan Dan Pengantin - Brebes.' property='og:description'/>
 <meta content='website' property='og:type'/>
-<meta content='Penyewaan Sound System, Panggung, Lighting ' property='og:description'/>
-<meta content='XXXXXXXXX' property='og:image'/>
+<meta content='https://kencanabrebes.github.io/soundsystem/KENCANA_Soundsystem-512.png' property='og:image'/>
 <meta content='158' property='og:image:width'/>
 <meta content='158' property='og:image:height'/>
 <meta content='KENCANA Brebes' name='Author'/>
