--- a/index.html
+++ b/index.html
@@ -1,12 +1,37 @@
-<!DOCTYPE html>
-<HTML ⚡ lang="id">
-<head>
-<meta charset='utf-8'/>
-<meta content='width=device-width,minimum-scale=1,initial-scale=1' name='viewport'/>
-<meta content='IE=9; IE=8; IE=7; IE=EDGE; chrome=1' http-equiv='X-UA-Compatible'/>
+<!DOCTYPE html><HTML ⚡ lang="id"><head><meta charset='utf-8'/><meta content='width=device-width,minimum-scale=1,initial-scale=1' name='viewport'/><meta content='IE=9; IE=8; IE=7; IE=EDGE; chrome=1' http-equiv='X-UA-Compatible'/><meta content='website' property='og:type'/><meta content='158' property='og:image:width'/><meta content='158' property='og:image:height'/><meta content='summary_large_image' name='twitter:card'/><style amp-boilerplate='amp-boilerplate'>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate='amp-boilerplate'>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript><script async='async' src='https://cdn.ampproject.org/v0.js'></script>
+<script type="application/ld+json">
+  {
+    "@context": "http://schema.org",
+    "@type": "Webpage",
+    "url": "https://kencanabrebes.github.io/soundsystem/",
+    "name": "KENCANA Sound System",
+    "headline":"KENCANA Sound System - Brebes",
+    "description":"Jasa Penyewaan Sound System, Panggung, Lighting, Perlengkapan Hajatan Dan Pengantin - Brebes.",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://kencanabrebes.github.io/soundsystem/"
+    },
+    "publisher": {
+      "@type": "Organization",
+      "name": "AMP Project",
+      "logo": {
+          "url": "https://kencanabrebes.github.io/soundsystem/KENCANA_Soundsystem-512.png",
+          "width": 175,
+          "height": 60,
+          "@type": "ImageObject"
+      }
+    },
+    "image": {
+      "@type": "ImageObject",
+      "url": "https://kencanabrebes.github.io/soundsystem/KENCANA_Soundsystem-512.png",
+      "width": 1200,
+      "height": 630
+    }
+  }
+  </script>
 <title>KENCANA Sound System - Brebes</title>
 <meta content='#555555' name='theme-color'/>
-<meta content='#55555' name='msapplication-navbutton-color'/>
+<meta content='#555555' name='msapplication-navbutton-color'/>
 <link href='https://kencanabrebes.github.io/soundsystem/' rel='canonical'/>
 <link href='https://kencanabrebes.github.io/soundsystem/' hreflang='x-default' rel='alternate'/>
 <link href='https://kencanabrebes.github.io/soundsystem/manifest.json' rel='manifest'/>
@@ -17,30 +42,13 @@
 <link href='https://kencanabrebes.github.io/soundsystem/KENCANA_Soundsystem_favicon192.png' rel='icon' sizes='192x192'/>
 <meta content='Jasa Penyewaan Sound System, Panggung, Lighting, Perlengkapan Hajatan Dan Pengantin - Brebes.' name='description'/>
 <meta content='Jasa Penyewaan Sound System, Panggung, Lighting, Perlengkapan Hajatan Dan Pengantin - Brebes.' property='og:description'/>
-<meta content='website' property='og:type'/>
 <meta content='https://kencanabrebes.github.io/soundsystem/KENCANA_Soundsystem-512.png' property='og:image'/>
-<meta content='158' property='og:image:width'/>
-<meta content='158' property='og:image:height'/>
 <meta content='KENCANA Brebes' name='Author'/>
 <meta content='KENCANA Sound System - Brebes' property='og:image:alt'/>
 <meta content='KENCANA Sound System - Brebes' property='og:site_name'/>
 <meta content='KENCANA Sound System - Brebes' property='og:title'/>
-<meta content='KENCANA Sound System - Brebes' name='twitter:site'/>
-<meta content='summary_large_image' name='twitter:card'/>
-<script type='application/ld+json'>
-{
-  "@context": "http://schema.org",
-  "@type": "WebSite",
-  "url": "https://kencanabrebes.github.io/soundsystem/",
-  "potentialAction": {
-    "@type": "SearchAction",
-    "target": "https://kencanabrebes.github.io/soundsystem/search?q={q}",
-    "query-input": "required name=q"
-  }
-}
-</script>
-<style amp-boilerplate='amp-boilerplate'>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate='amp-boilerplate'>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
-<script async='async' src='https://cdn.ampproject.org/v0.js'></script>   
+<meta content='KENCANA Sound System - Brebes' name='twitter:site'/>   
+
 <style amp-custom='amp-custom'>
   header{background:#fbfbfb;position:fixed;top:0;width:100%;right:0;left:0;z-index: 99999;padding: 10px 18px;box-shadow: 0 1px 3px #555;}
   header amp-img{max-width: 160px;}
