--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     },
     "publisher": {
       "@type": "Organization",
-      "name": "AMP Project",
+      "name": "KENCANA Brebes",
       "logo": {
           "url": "https://kencanabrebes.github.io/soundsystem/KENCANA_Soundsystem-512.png",
           "width": 175,
