--- a/index.html
+++ b/index.html
@@ -50,16 +50,35 @@
 <meta content='KENCANA Sound System - Brebes' name='twitter:site'/>   
 
 <style amp-custom='amp-custom'>
-  header{background:#fbfbfb;position:fixed;top:0;width:100%;right:0;left:0;z-index: 99999;padding: 10px 18px;box-shadow: 0 1px 3px #555;}
-  header amp-img{max-width: 160px;}
-  #gambar{margin: 70px auto 0;}
+#endas{background:#fbfbfb;position:fixed;top:0;width:100%;right:0;left:0;z-index: 99999;padding: 10px 18px;box-shadow: 0 1px 3px #555;}
+header{float:left}
+header amp-img{max-width: 160px;}
+.navi{max-width: 1006px;float:left;width:calc(100% - 178px)}
+.navi h2,.navi .ngimput{display:none;}
+.navi ul{margin:0;padding:0}
+.navi li {display: inline-block; position: relative; z-index: 10;}
+.navi li a {text-transform: uppercase;font-size: 15px;font-weight: bold;color: #d3d8d9;display: block;padding: 16px 20px;text-decoration: none;}
+.navi li a:link,.menu li a:visited {color: #efefef;}
+.navi li a:hover{opacity:1;background-color:#222;}
+#gambar{margin: 70px auto 0;}
 </style>
+  
 </head>
 
 <body>
-<header>
-  <amp-img src='https://kencanabrebes.github.io/soundsystem/header_kencanasoundsystem.png' width='160' height='50' layout='responsive'/>
-  </header>
+
+<div id='endas'>
+  
+<header><a href='https://kencanabrebes.github.io/soundsystem/' title='KENCANA Sound System'><amp-img src='https://kencanabrebes.github.io/soundsystem/header_kencanasoundsystem.png' width='160' height='50' layout='responsive'/></a></header>
+
+<div class='navi><input class='ngimput' type='checkbox'/><span></span><nav><ul>                                                       
+<li><a href='#' title='Profil'>Profil</a></li>
+<li><a href='#' title='Santri'>Layanan</a></li>
+<li><a href='#' title='News'>Alamat</a></li>
+</ul></nav></div>
+
+</div>
+  
 <div id='gambar'><amp-img src='https://kencanabrebes.github.io/soundsystem/kencanasoundsystem%20.png' width='1000' height='446' layout='responsive' /></div>
 cek page
 </body>
