--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ header amp-img{max-width: 160px;}
   
 <header><a href='https://kencanabrebes.github.io/soundsystem/' title='KENCANA Sound System'><amp-img src='https://kencanabrebes.github.io/soundsystem/header_kencanasoundsystem.png' width='160' height='50' layout='responsive'/></a></header>
 
-<div class='navi><input class='ngimput' type='checkbox'></input><span></span><nav><ul>                                                       
+<div class='navi'><input class='ngimput' type='checkbox'></input><span></span><nav><ul>                                                       
 <li><a href='#' title='Profil'>Profil</a></li>
 <li><a href='#' title='Santri'>Layanan</a></li>
 <li><a href='#' title='News'>Alamat</a></li>
