--- a/index.html
+++ b/index.html
@@ -51,9 +51,8 @@
 
 <style amp-custom='amp-custom'>
 #endas{background:#fbfbfb;position:fixed;top:0;width:100%;right:0;left:0;z-index: 99999;padding: 10px 18px;box-shadow: 0 1px 3px #555;}
-header{float:left}
-header amp-img{max-width: 160px;}
-.navi{max-width: 1006px;float:left;width:calc(100% - 178px)}
+header{float:left;max-width: 160px;}
+.navi{max-width: 1006px;float:right;width:calc(100% - 178px)}
 .navi h2,.navi .ngimput{display:none;}
 .navi ul{margin:0;padding:0}
 .navi li {display: inline-block; position: relative; z-index: 10;}
