--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 #endas{background:#fbfbfb;position:fixed;top:0;width:100%;right:0;left:0;z-index: 99999;padding: 10px 18px;box-shadow: 0 1px 3px #555;}
 header{float:left;max-width: 160px;}
 .navi{max-width: 1006px;float:right;width:calc(100% - 178px)}
-.navi h2,.navi .ngimput{display:none;}
+.navi input{display:none;}
 .navi ul{margin:0;padding:0}
 .navi li {display: inline-block; position: relative; z-index: 10;}
 .navi li a {text-transform: uppercase;font-size: 15px;font-weight: bold;color: #d3d8d9;display: block;padding: 16px 20px;text-decoration: none;}
