--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 <style amp-custom='amp-custom'>
 #endas{background:#fbfbfb;position:fixed;top:0;width:100%;right:0;left:0;z-index: 99999;padding: 10px 18px;box-shadow: 0 1px 3px #555;}
-header{float:left;max-width: 160px;}
+header{float:left;max-width: 160px;width:100%;}
 .navi{max-width: 1006px;float:right;width:calc(100% - 178px)}
 .navi input{display:none;}
 .navi ul{margin:0;padding:0}
