--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
 <style amp-custom='amp-custom'>
 #endas{background:#fbfbfb;position:fixed;top:0;width:100%;right:0;left:0;z-index: 99999;padding: 10px 18px;box-shadow: 0 1px 3px #555;}
 header{float:left;max-width: 160px;width:100%;}
-.navi{max-width: 1006px;float:right;width:calc(100% - 178px)}
+.navi{max-width: 1006px;float:right;width:calc(100% - 178px);margin: -10px 0;}
 .navi input{display:none;}
 .navi ul{margin:0;padding:0}
 .navi li {display: inline-block; position: relative; z-index: 10;}
-.navi li a {text-transform: uppercase;font-size: 15px;font-weight: bold;color: #d3d8d9;display: block;padding: 16px 20px;text-decoration: none;}
-.navi li a:link,.menu li a:visited {color: #efefef;}
-.navi li a:hover{opacity:1;background-color:#222;}
+.navi li a {text-transform: uppercase;font-size: 15px;font-weight: bold;color: #777;display: block;padding:27px 20px 26px;text-decoration: none;}
+.navi li a:link,.menu li a:visited {color: #777;}
+.navi li a:hover{border-botom:3px solid #ed1b24;padding:27px 20px 23px;}
 #gambar{margin: 70px auto 0;}
 </style>
   
