--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ header{float:left;max-width: 160px;width:100%;}
 .navi li {display: inline-block; position: relative; z-index: 10;}
 .navi li a {text-transform: uppercase;font-size: 15px;font-weight: bold;color: #777;display: block;padding:27px 20px 26px;text-decoration: none;}
 .navi li a:link,.menu li a:visited {color: #777;}
-.navi li a:hover{border-botom:3px solid #ed1b24;padding:27px 20px 23px;}
+.navi li a:hover{border-bottom:3px solid #ed1b24;padding:27px 20px 23px;}
 #gambar{margin: 70px auto 0;}
 </style>
   
