--- a/index.html
+++ b/index.html
@@ -59,19 +59,8 @@ header{float:left;max-width: 160px;width:100%;}
 .navi li a {text-transform: uppercase;font-size: 15px;font-weight: bold;color: #777;display: block;padding:27px 20px 26px;text-decoration: none;}
 .navi li a:link,.menu li a:visited {color: #777;}
 .navi li a:hover{color: #555;transition: all .4s ease-out;}
-.navi li:before{content:'';height:4px;width:0;position:absolute;bottom:0;left:0;background:#e8554e;transition:all .4s ease-out}
+.navi li:before{content:'';height:4px;width:0;position:absolute;bottom:0;left:0;background:#ec1019;transition:all .4s ease-out}
 .navi li:hover:before{width:100%}
-/*
-.slideInUp{-webkit-animation-name:slideInUp;animation-name:slideInUp;-webkit-animation-duration:1s;animation-duration:1s;-webkit-animation-fill-mode:both;animation-fill-mode:both}
-@-webkit-keyframes slideInUp{
-0%{-webkit-transform:translateY(100%);transform:translateY(100%);visibility:visible}
-100%{-webkit-transform:translateY(0);transform:translateY(0)}
-}
-@keyframes slideInUp{
-0%{-webkit-transform:translateY(100%);transform:translateY(100%);visibility:visible}
-100%{-webkit-transform:translateY(0);transform:translateY(0)}
-}
-*/
 #gambar{margin: 70px auto 0;}
 </style>
   
