--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ header{float:left;max-width: 160px;width:100%;}
 .navi li {display: inline-block; position: relative; z-index: 10;}
 .navi li a {text-transform: uppercase;font-size: 15px;font-weight: bold;color: #777;display: block;padding:27px 20px 26px;text-decoration: none;}
 .navi li a:link,.menu li a:visited {color: #777;}
-.navi li a:hover{color: #555;transition: all .4s ease-out;}
+.navi li a:hover{color: #444;}
 .navi li:before{content:'';height:4px;width:0;position:absolute;bottom:0;left:0;background:#ec1019;transition:all .4s ease-out}
 .navi li:hover:before{width:100%}
 #gambar{margin: 70px auto 0;}
