--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ header{float:left;max-width: 160px;width:100%;}
 
 <div id='endas'>
   
-<header><a href='https://kencanabrebes.github.io/soundsystem/' title='KENCANA Sound System'><amp-img src='https://kencanabrebes.github.io/soundsystem/header_kencanasoundsystem.png' width='160' height='50' layout='responsive'/></a></header>
+<header><a href='https://kencanabrebes.github.io/soundsystem/' title='KENCANA Sound System'><amp-img noloading='' src='https://kencanabrebes.github.io/soundsystem/header_kencanasoundsystem.png' width='160' height='50' layout='responsive'/></a></header>
 
 <div class='navi'><input class='ngimput' type='checkbox'></input><span></span><nav><ul>                                                       
 <li><a href='#' title='Profil'>Profil</a></li>
