--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ header{float:left;max-width: 160px;width:100%;}
 
 </div>
   
-<div id='gambar'><amp-img src='https://kencanabrebes.github.io/soundsystem/kencanasoundsystem%20.png' width='1000' height='446' layout='responsive' /></div>
+<div id='gambar'><amp-img noloading='' src='https://kencanabrebes.github.io/soundsystem/kencanasoundsystem%20.png' width='1000' height='446' layout='responsive' /></div>
 cek page
 </body>
 </HTML>
