--- a/index.html
+++ b/index.html
@@ -63,7 +63,11 @@ header{float:left;max-width: 160px;width:100%;}
 .navi li a:hover{color: #444;}
 .navi li:before{content:'';height:4px;width:0;position:absolute;bottom:0;left:0;background:#ec1019;transition:all .4s ease-out}
 .navi li:hover:before{width:100%}
-#gambar{margin: 70px auto 0;}
+#propil{position:relative}
+.propilbg{background-image: url(https://kencanabrebes.github.io/soundsystem/kencanasoundsystem%20.png);min-height: 100vh;background-attachment: fixed;background-position: center;background-repeat: no-repeat;background-size: cover;padding: 0;margin: 0;}
+.propiltek{position: absolute;bottom: 20%;left: 0;text-align: center;padding: 40px 20%;margin: 0;}
+.propiltek h2 {font-size: 50px;font-weight: 700;color: #f1f1f1;margin: 0 0 15px;line-height: 1.3;text-shadow: 1px 1px #191919;}
+.propiltek p {font-size: 24px;padding: 0;margin: 0;color: #f1f1f1;line-height: 1.5;text-shadow: 1px 1px #191919;}
 </style>
   
 </head>
@@ -82,7 +86,14 @@ header{float:left;max-width: 160px;width:100%;}
 
 </div>
   
-<div id='gambar'><amp-img noloading='' src='https://kencanabrebes.github.io/soundsystem/kencanasoundsystem%20.png' width='1000' height='446' layout='responsive' /></div>
-cek page
+<div id='propil'>
+<div class='propilbg'></div>
+<div class='propiltek'>
+<h2>KENCANA Sound System</h2>
+<p>Jasa Penyewaan Sound System, Panggung, Lighting, Perlengkapan Hajatan Dan Pengantin - Wilayah Kabupaten Brebes.</p>
+</div>
+</div>
+
+
 </body>
 </HTML>
