--- a/index.html
+++ b/index.html
@@ -63,11 +63,19 @@ header{float:left;max-width: 160px;width:100%;}
 .navi li a:hover{color: #444;}
 .navi li:before{content:'';height:4px;width:0;position:absolute;bottom:0;left:0;background:#ec1019;transition:all .4s ease-out}
 .navi li:hover:before{width:100%}
-#propil{position:relative}
+
+#propil{position:relative;padding: 70px 0 0;}
 .propilbg{background-image: url(https://kencanabrebes.github.io/soundsystem/kencanasoundsystem%20.png);min-height: 100vh;background-attachment: fixed;background-position: center;background-repeat: no-repeat;background-size: cover;padding: 0;margin: 0;}
 .propiltek{position: absolute;bottom: 20%;left: 0;text-align: center;padding: 40px 20%;margin: 0;}
 .propiltek h2 {font-size: 50px;font-weight: 700;color: #f1f1f1;margin: 0 0 15px;line-height: 1.3;text-shadow: 1px 1px #191919;}
 .propiltek p {font-size: 24px;padding: 0;margin: 0;color: #f1f1f1;line-height: 1.5;text-shadow: 1px 1px #191919;}
+
+#layanan{margin:-70px 0 0;padding:70px 0 0;}
+#layanan h2 {font-size: 30px;text-align: center;color: #555;line-height: 1.3;font-weight: 700;margin: 0 0 15px;}
+#layanan h3 {font-size: 18px;color: #777;line-height: 1.5;font-weight: 500;margin: 0 0 25px;text-align: center;}
+.layanan{float:left; width:calc(25% - 20px);margin:10px;box-shadow:0 1px 3px #ddd;}
+.nengah{max-width:890px;margin:0 auto;}
+.resik{clear:both}
 </style>
   
 </head>
@@ -94,6 +102,17 @@ header{float:left;max-width: 160px;width:100%;}
 </div>
 </div>
 
+<div id='layanan'>
+<div class='nengah'>
+<h2>Layanan</h2>
+<p>Pilih layanan dan Biarkan kami yang mengurus semuanya.</p>
+<div class='resik'></div>
+<div class='layanan'></div>
+<div class='layanan'></div>
+<div class='layanan'></div>
+<div class='layanan'></div>
+</div>
+</div>
 
 </body>
 </HTML>
