--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <style amp-custom='amp-custom'>
 @font-face{font-family:Roboto;font-style:normal;font-weight:300;src:local('Roboto Light'),local('Roboto-Light'),url(https://fonts.gstatic.com/s/roboto/v16/Hgo13k-tfSpn0qi1SFdUfT8E0i7KZn-EPnyo3HZu7kw.woff) format('woff'),url(https://fonts.gstatic.com/s/roboto/v16/0eC6fl06luXEYWpBSJvXCBJtnKITppOI_IvcXXDNrsc.woff2) format('woff2'),url(https://fonts.gstatic.com/s/roboto/v16/Hgo13k-tfSpn0qi1SFdUfSZ2oysoEQEeKwjgmXLRnTc.ttf) format('truetype')}@font-face{font-family:Roboto;font-style:normal;font-weight:500;src:local('Roboto Medium'),local('Roboto-Medium'),url(https://fonts.gstatic.com/s/roboto/v16/RxZJdnzeo3R5zSexge8UUT8E0i7KZn-EPnyo3HZu7kw.woff) format('woff'),url(https://fonts.gstatic.com/s/roboto/v16/ZLqKeelYbATG60EpZBSDyxJtnKITppOI_IvcXXDNrsc.woff2) format('woff2'),url(https://fonts.gstatic.com/s/roboto/v16/RxZJdnzeo3R5zSexge8UUSZ2oysoEQEeKwjgmXLRnTc.ttf) format('truetype')}@font-face{font-family:Roboto;font-style:normal;font-weight:900;src:local('Roboto Black'),local('Roboto-Black'),url(https://fonts.gstatic.com/s/roboto/v16/mnpfi9pxYH-Go5UiibESIj8E0i7KZn-EPnyo3HZu7kw.woff) format('woff'),url(https://fonts.gstatic.com/s/roboto/v16/s7gftie1JANC-QmDJvMWZhJtnKITppOI_IvcXXDNrsc.woff2) format('woff2'),url(https://fonts.gstatic.com/s/roboto/v16/mnpfi9pxYH-Go5UiibESIiZ2oysoEQEeKwjgmXLRnTc.ttf) format('truetype')}@font-face{font-family:Roboto;font-style:italic;font-weight:300;src:local('Roboto Light Italic'),local('Roboto-LightItalic'),url(https://fonts.gstatic.com/s/roboto/v16/7m8l7TlFO-S3VkhHuR0at4bN6UDyHWBl620a-IRfuBk.woff) format('woff'),url(https://fonts.gstatic.com/s/roboto/v16/7m8l7TlFO-S3VkhHuR0atzTOQ_MqJVwkKsUn0wKzc2I.woff2) format('woff2'),url(https://fonts.gstatic.com/s/roboto/v16/7m8l7TlFO-S3VkhHuR0atywlidHJgAgmTjOEEzwu1L8.ttf) format('truetype')}@font-face{font-family:Roboto;font-style:italic;font-weight:500;src:local('Roboto Medium Italic'),local('Roboto-MediumItalic'),url(https://fonts.gstatic.com/s/roboto/v16/OLffGBTaF0XFOW1gnuHF0YbN6UDyHWBl620a-IRfuBk.woff) format('woff'),url(https://fonts.gstatic.com/s/roboto/v16/OLffGBTaF0XFOW1gnuHF0TTOQ_MqJVwkKsUn0wKzc2I.woff2) format('woff2'),url(https://fonts.gstatic.com/s/roboto/v16/OLffGBTaF0XFOW1gnuHF0SwlidHJgAgmTjOEEzwu1L8.ttf) format('truetype')}
 body{font-family:Roboto,Arial,sans-serif;font-weight: 300;}
-#endas{background:#fbfbfb;position:fixed;top:0;width:100%;right:0;left:0;z-index: 99999;padding: 10px 18px;box-shadow: 0 1px 3px #555;}
+#endas{background:#fbfbfb;position:fixed;top:0;width:100%;right:0;left:0;z-index: 99999;padding: 10px 18px;box-shadow:0 1px 7px #999;}
 header{float:left;max-width: 160px;width:100%;}
 .navi{max-width: 1006px;float:right;width:calc(100% - 178px);margin: -10px 0;}
 .navi input{display:none;}
@@ -73,8 +73,8 @@ header{float:left;max-width: 160px;width:100%;}
 #layanan{margin:-70px 0 0;padding:70px 0 0;}
 #layanan h2 {font-size: 30px;text-align: center;color: #555;line-height: 1.3;font-weight: 700;margin: 0 0 15px;}
 #layanan h3 {font-size: 18px;color: #777;line-height: 1.5;font-weight: 500;margin: 0 0 25px;text-align: center;}
-.layanan{float:left; width:calc(25% - 20px);margin:10px;box-shadow:0 1px 3px #ddd;}
-.nengah{max-width:890px;margin:0 auto;}
+.layanan{float:left; width:calc(25% - 20px);margin:10px;box-shadow:0 1px 3px #ddd;height: 300px;}
+.nengah{max-width:987px;margin:0 auto;padding: 20px 0;overflow: hidden;}
 .resik{clear:both}
 </style>
   
@@ -104,13 +104,21 @@ header{float:left;max-width: 160px;width:100%;}
 
 <div id='layanan'>
 <div class='nengah'>
-<h2>Layanan</h2>
-<p>Pilih layanan dan Biarkan kami yang mengurus semuanya.</p>
+<h2>Layanan Kami</h2>
+<h3>Pilih layanan dan Biarkan kami yang mengurus semuanya.</h3>
 <div class='resik'></div>
-<div class='layanan'></div>
-<div class='layanan'></div>
-<div class='layanan'></div>
-<div class='layanan'></div>
+<div class='layanan'>
+<p>Sound System</p>
+</div>
+<div class='layanan'>
+<p>Panggung</p>
+</div>
+<div class='layanan'>
+<p>Lighting</p>
+</div>
+<div class='layanan'>
+<p>Tenda/Layos</p>
+</div>
 </div>
 </div>
 
