--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ header{float:left;max-width: 160px;width:100%;}
 #layanan{margin:-70px 0 0;padding:70px 0 0;}
 #layanan h2 {font-size: 30px;text-align: center;color: #555;line-height: 1.3;font-weight: 700;margin: 0 0 15px;}
 #layanan h3 {font-size: 18px;color: #777;line-height: 1.5;font-weight: 500;margin: 0 0 25px;text-align: center;}
-.layanan{float:left; width:calc(25% - 20px);margin:10px;box-shadow:0 1px 3px #ddd;height: 300px;}
+.layanan{float:left; width:calc(25% - 20px);margin:10px;box-shadow:0 1px 3px #ddd;height: 300px;border-radius:3px;}
 .layanan p{text-align: center;font-weight: 400;}
 </style>
   
@@ -111,15 +111,19 @@ header{float:left;max-width: 160px;width:100%;}
 <h3>Pilih layanan dan Biarkan kami yang mengurus semuanya.</h3>
 <div class='resik'></div>
 <div class='layanan'>
+<amp-img noloading='' src='https://kencanabrebes.github.io/soundsystem/soundsystem-kencana.jpg' width='3' height='2' layout='responsive' />
 <p>Sound System</p>
 </div>
 <div class='layanan'>
+<amp-img noloading='' src='https://kencanabrebes.github.io/soundsystem/panggung-kencana.jpg' width='3' height='2' layout='responsive' />
 <p>Panggung</p>
 </div>
 <div class='layanan'>
+<amp-img noloading='' src='https://kencanabrebes.github.io/soundsystem/lighting-kencana.jpg' width='3' height='2' layout='responsive' />
 <p>Lighting</p>
 </div>
 <div class='layanan'>
+<amp-img noloading='' src='https://kencanabrebes.github.io/soundsystem/tendalayos-kencana.jpg' width='3' height='2' layout='responsive' />
 <p>Tenda/Layos</p>
 </div>
 </div>
