--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@ header{float:left;max-width: 160px;width:100%;}
 #layanan h2 {font-size: 30px;text-align: center;color: #555;line-height: 1.3;font-weight: 700;margin: 0 0 15px;}
 #layanan h3 {font-size: 18px;color: #777;line-height: 1.5;font-weight: 500;margin: 0 0 25px;text-align: center;}
 .layanan{float:left; width:calc(25% - 20px);margin:10px;box-shadow:0 1px 3px #ddd;height: 300px;border-radius:3px;}
+.layanan amp-img{width:100%;height:auto;}
 .layanan p{text-align: center;font-weight: 400;}
 </style>
   
