--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@ body{font-family:Roboto,Arial,sans-serif;font-weight: 300;}
 .resik{clear:both}
 
   
-#endas{background:#fbfbfb;position:fixed;top:0;width:100%;right:0;left:0;z-index: 99999;padding: 10px 18px;box-shadow:0 1px 7px #999;}
-header{float:left;max-width: 160px;width:100%;}
-.navi{max-width: 1006px;float:right;width:calc(100% - 178px);margin: -10px 0;}
+#endas{background:#fbfbfb;position:fixed;top:0;right:0;left:0;z-index: 99999;box-shadow:0 1px 7px #999;}
+header{float:left;max-width: 160px;width:100%;padding: 10px 18px;}
+.navi{float:right;}
 .navi input{display:none;}
 .navi ul{margin:0;padding:0}
 .navi li {display: inline-block; position: relative; z-index: 10;}
@@ -112,19 +112,19 @@ header{float:left;max-width: 160px;width:100%;}
 <h3>Pilih layanan dan Biarkan kami yang mengurus semuanya.</h3>
 <div class='resik'></div>
 <div class='layanan'>
-<amp-img noloading='' src='https://kencanabrebes.github.io/soundsystem/soundsystem-kencana.jpg' width='336' height='224' layout='responsive' />
+<amp-img noloading='' src='https://kencanabrebes.github.io/soundsystem/soundsystem-kencana.jpg' width='336' height='224' layout='responsive'></amp-img>
 <p>Sound System</p>
 </div>
 <div class='layanan'>
-<amp-img noloading='' src='https://kencanabrebes.github.io/soundsystem/panggung-kencana.jpg' width='336' height='224' layout='responsive' />
+<amp-img noloading='' src='https://kencanabrebes.github.io/soundsystem/panggung-kencana.jpg' width='336' height='224' layout='responsive'></amp-img>
 <p>Panggung</p>
 </div>
 <div class='layanan'>
-<amp-img noloading='' src='https://kencanabrebes.github.io/soundsystem/lighting-kencana.jpg' width='336' height='224' layout='responsive' />
+<amp-img noloading='' src='https://kencanabrebes.github.io/soundsystem/lighting-kencana.jpg' width='336' height='224' layout='responsive'></amp-img>
 <p>Lighting</p>
 </div>
 <div class='layanan'>
-<amp-img noloading='' src='https://kencanabrebes.github.io/soundsystem/tendalayos-kencana.jpg' width='363' height='224' layout='responsive' />
+<amp-img noloading='' src='https://kencanabrebes.github.io/soundsystem/tendalayos-kencana.jpg' width='363' height='224' layout='responsive'></amp-img>
 <p>Tenda/Layos</p>
 </div>
 </div>
