--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ header{float:left;max-width: 160px;width:100%;padding: 10px 18px;}
 .navi li:hover:before{width:100%}
 
 #propil{position:relative;padding: 70px 0 0;}
-.propilbg{background-image: url(https://kencanabrebes.github.io/soundsystem/kencanasoundsystem%20.png);min-height: 100vh;background-attachment: fixed;background-position: center;background-repeat: no-repeat;background-size: cover;padding: 0;margin: 0;}
+.propilbg{background-image: url(https://kencanabrebes.github.io/soundsystem/kencanasoundsystem%20.png);min-height:calc(100vh - 70px);background-attachment: fixed;background-position: center;background-repeat: no-repeat;background-size: cover;padding: 0;margin: 0;}
 .propiltek{position: absolute;bottom: 20%;left: 0;text-align: center;padding: 40px 20%;margin: 0;}
 .propiltek h2 {font-size: 50px;font-weight: 700;color: #f1f1f1;margin: 0 0 15px;line-height: 1.3;text-shadow: 1px 1px #191919;}
 .propiltek p {font-size: 24px;padding: 0;margin: 0;color: #f1f1f1;line-height: 1.5;text-shadow: 1px 1px #191919;}
