--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ header{float:left;max-width: 160px;width:100%;padding: 10px 18px;}
 .propiltek h2 {font-size: 50px;font-weight: 700;color: #f1f1f1;margin: 0 0 15px;line-height: 1.3;text-shadow: 1px 1px #191919;}
 .propiltek p {font-size: 24px;padding: 0;margin: 0;color: #f1f1f1;line-height: 1.5;text-shadow: 1px 1px #191919;}
 
-#layanan{margin:-70px 0 0;padding:70px 0 0;}
+#layanan{margin:-70px 0 0;padding:70px 0 0;min-height:calc(100vh - 70px)}
 #layanan h2 {font-size: 30px;text-align: center;color: #555;line-height: 1.3;font-weight: 700;margin: 0 0 15px;}
 #layanan h3 {font-size: 18px;color: #777;line-height: 1.5;font-weight: 500;margin: 0 0 25px;text-align: center;}
 .layanan{float:left; width:calc(25% - 20px);margin:10px;box-shadow:0 1px 3px #ddd;overflow:hidden;border-radius:3px;}
