--- a/index.html
+++ b/index.html
@@ -55,24 +55,8 @@ body{font-family:Roboto,Arial,sans-serif;font-weight: 300;}
 .nengah{max-width:987px;margin:0 auto;padding: 20px 0;overflow: hidden;}
 .resik{clear:both}
 
-  
-#endas{background:#fbfbfb;position:fixed;top:0;right:0;left:0;z-index: 99999;box-shadow:0 1px 7px #999;}
-header{float:left;max-width: 160px;width:100%;padding: 10px 18px;}
-.navi{float:right;}
-.navi input{display:none;}
-.navi ul{margin:0;padding:0}
-.navi li {display: inline-block; position: relative; z-index: 10;}
-.navi li a {text-transform: uppercase;font-size: 15px;font-weight:500;color: #777;display: block;padding:27px 20px 26px;text-decoration: none;}
-.navi li a:link,.menu li a:visited {color: #777;}
-.navi li a:hover{color: #444;}
-.navi li:before{content:'';height:4px;width:0;position:absolute;bottom:0;left:0;background:#ec1019;transition:all .4s ease-out}
-.navi li:hover:before{width:100%}
-
-#propil{position:relative;padding: 70px 0 0;}
-.propilbg{background-image: url(https://kencanabrebes.github.io/soundsystem/kencanasoundsystem%20.png);min-height:calc(100vh - 70px);background-attachment: fixed;background-position: center;background-repeat: no-repeat;background-size: cover;padding: 0;margin: 0;}
-.propiltek{position: absolute;bottom: 20%;left: 0;text-align: center;padding: 40px 20%;margin: 0;}
-.propiltek h2 {font-size: 50px;font-weight: 700;color: #f1f1f1;margin: 0 0 15px;line-height: 1.3;text-shadow: 1px 1px #191919;}
-.propiltek p {font-size: 24px;padding: 0;margin: 0;color: #f1f1f1;line-height: 1.5;text-shadow: 1px 1px #191919;}
+#endas{background:#fbfbfb;position:fixed;top:0;right:0;left:0;z-index: 99999;box-shadow:0 1px 7px #999;}header{float:left;max-width: 160px;width:100%;padding: 10px 18px;}.navi{float:right;}.navi input{display:none;}.navi ul{margin:0;padding:0}.navi li {display: inline-block; position: relative; z-index: 10;}.navi li a {text-transform: uppercase;font-size: 15px;font-weight:500;color: #777;display: block;padding:27px 20px 26px;text-decoration: none;}.navi li a:link,.menu li a:visited {color: #777;}.navi li a:hover{color: #444;}.navi li:before{content:'';height:4px;width:0;position:absolute;bottom:0;left:0;background:#ec1019;transition:all .4s ease-out}.navi li:hover:before{width:100%}
+#propil{position:relative;padding: 70px 0 0;}.propilbg{background-image: url(https://kencanabrebes.github.io/soundsystem/kencanasoundsystem%20.png);min-height:calc(100vh - 70px);background-attachment: fixed;background-position: center;background-repeat: no-repeat;background-size: cover;padding: 0;margin: 0;}.propiltek{position: absolute;bottom: 20%;left: 0;text-align: center;padding: 40px 20%;margin: 0;}.propiltek h2 {font-size: 50px;font-weight: 700;color: #f1f1f1;margin: 0 0 15px;line-height: 1.3;text-shadow: 1px 1px #191919;}.propiltek p {font-size: 24px;padding: 0;margin: 0;color: #f1f1f1;line-height: 1.5;text-shadow: 1px 1px #191919;}
 
 #layanan{margin:-70px 0 0;padding:70px 0 0;min-height:calc(100vh - 70px)}
 #layanan h2 {font-size: 30px;text-align: center;color: #555;line-height: 1.3;font-weight: 700;margin: 0 0 15px;}
@@ -80,6 +64,8 @@ header{float:left;max-width: 160px;width:100%;padding: 10px 18px;}
 .layanan{float:left; width:calc(25% - 20px);margin:10px;box-shadow:0 1px 3px #ddd;overflow:hidden;border-radius:3px;}
 .layanan amp-img{width:100%;height:auto;}
 .layanan p{text-align: center;font-weight: 400;}
+  
+footer{background:#555;text-align:center}
 </style>
   
 </head>
@@ -87,24 +73,15 @@ header{float:left;max-width: 160px;width:100%;padding: 10px 18px;}
 <body>
 
 <div id='endas'>
-  
 <header><a href='https://kencanabrebes.github.io/soundsystem/' title='KENCANA Sound System'><amp-img noloading='' src='https://kencanabrebes.github.io/soundsystem/header_kencanasoundsystem.png' width='160' height='50' layout='responsive'/></a></header>
-
 <div class='navi'><input class='ngimput' type='checkbox'></input><span></span><nav><ul>                                                       
 <li><a href='#propil' title='Profil KENCANA Sound System'>Profil</a></li>
 <li><a href='#layanan' title='Layanan Kami'>Layanan</a></li>
 <li><a href='#lokasi' title='Lokasi'>Alamat</a></li>
 </ul></nav></div>
-
 </div>
   
-<div id='propil'>
-<div class='propilbg'></div>
-<div class='propiltek'>
-<h2>KENCANA Sound System</h2>
-<p>Jasa Penyewaan Sound System, Panggung, Lighting, Perlengkapan Hajatan Dan Pengantin - Wilayah Kabupaten Brebes.</p>
-</div>
-</div>
+<div id='propil'><div class='propilbg'></div><div class='propiltek'><h2>KENCANA Sound System</h2><p>Jasa Penyewaan Sound System, Panggung, Lighting, Perlengkapan Hajatan Dan Pengantin - Wilayah Kabupaten Brebes.</p></div></div>
 
 <div id='layanan'>
 <div class='nengah'>
@@ -130,5 +107,7 @@ header{float:left;max-width: 160px;width:100%;padding: 10px 18px;}
 </div>
 </div>
 
+<footer>Copyright © 2018 | <a href='https://kencanabrebes.github.io/soundsystem/' title='KENCANA Sound System'>KENCANA Sound System</a></footer>
+  
 </body>
 </HTML>
