--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ body{font-family:Roboto,Arial,sans-serif;font-weight: 300;}
 .layanan amp-img{width:100%;height:auto;}
 .layanan p{text-align: center;font-weight: 400;}
   
-footer{background:#555;text-align:center}
+footer{background: #222;text-align: center;color: #777;padding: 20px;font-size: 12px;}footer a:link,footer a:visited{text-decoration:none;color:#777}footer a:hover{color:#999}
 </style>
   
 </head>
