--- a/index.html
+++ b/index.html
@@ -66,6 +66,24 @@ body{font-family:Roboto,Arial,sans-serif;font-weight: 300;}
 .layanan p{text-align: center;font-weight: 400;}
   
 footer{background: #222;text-align: center;color: #777;padding: 20px;font-size: 12px;}footer a:link,footer a:visited{text-decoration:none;color:#777}footer a:hover{color:#999}
+
+@media screen and (max-width: 1005px){
+header {max-width: 96px;padding: 10px;}
+.navi{margin: 0 5px 0 0;}
+.navi li a {font-size: 11px;padding:19px 5px 18px;}
+#propil {padding: 50px 0 0;}
+.propiltek {padding: 40px 5%;bottom: 10%;}
+.propiltek h2 {line-height: 1.1;}
+.propiltek p {line-height: 1.3;}
+.propilbg {min-height: calc(100vh - 50px);}
+.nengah {padding: 20px 5px;}
+#layanan {min-height: auto;margin: -50px 0 0;padding: 50px 0 0;}
+#layanan h2 {margin: 0 0 5px;}
+#layanan h3 {line-height: 1;margin: 0 0 10px;}
+.layanan {width: calc(50% - 10px);margin: 5px;}
+.layanan p {margin: 10px;}
+footer {padding: 10px;}
+}
 </style>
   
 </head>
