--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
 @font-face{font-family:Roboto;font-style:normal;font-weight:300;src:local('Roboto Light'),local('Roboto-Light'),url(https://fonts.gstatic.com/s/roboto/v16/Hgo13k-tfSpn0qi1SFdUfT8E0i7KZn-EPnyo3HZu7kw.woff) format('woff'),url(https://fonts.gstatic.com/s/roboto/v16/0eC6fl06luXEYWpBSJvXCBJtnKITppOI_IvcXXDNrsc.woff2) format('woff2'),url(https://fonts.gstatic.com/s/roboto/v16/Hgo13k-tfSpn0qi1SFdUfSZ2oysoEQEeKwjgmXLRnTc.ttf) format('truetype')}@font-face{font-family:Roboto;font-style:normal;font-weight:500;src:local('Roboto Medium'),local('Roboto-Medium'),url(https://fonts.gstatic.com/s/roboto/v16/RxZJdnzeo3R5zSexge8UUT8E0i7KZn-EPnyo3HZu7kw.woff) format('woff'),url(https://fonts.gstatic.com/s/roboto/v16/ZLqKeelYbATG60EpZBSDyxJtnKITppOI_IvcXXDNrsc.woff2) format('woff2'),url(https://fonts.gstatic.com/s/roboto/v16/RxZJdnzeo3R5zSexge8UUSZ2oysoEQEeKwjgmXLRnTc.ttf) format('truetype')}@font-face{font-family:Roboto;font-style:normal;font-weight:900;src:local('Roboto Black'),local('Roboto-Black'),url(https://fonts.gstatic.com/s/roboto/v16/mnpfi9pxYH-Go5UiibESIj8E0i7KZn-EPnyo3HZu7kw.woff) format('woff'),url(https://fonts.gstatic.com/s/roboto/v16/s7gftie1JANC-QmDJvMWZhJtnKITppOI_IvcXXDNrsc.woff2) format('woff2'),url(https://fonts.gstatic.com/s/roboto/v16/mnpfi9pxYH-Go5UiibESIiZ2oysoEQEeKwjgmXLRnTc.ttf) format('truetype')}@font-face{font-family:Roboto;font-style:italic;font-weight:300;src:local('Roboto Light Italic'),local('Roboto-LightItalic'),url(https://fonts.gstatic.com/s/roboto/v16/7m8l7TlFO-S3VkhHuR0at4bN6UDyHWBl620a-IRfuBk.woff) format('woff'),url(https://fonts.gstatic.com/s/roboto/v16/7m8l7TlFO-S3VkhHuR0atzTOQ_MqJVwkKsUn0wKzc2I.woff2) format('woff2'),url(https://fonts.gstatic.com/s/roboto/v16/7m8l7TlFO-S3VkhHuR0atywlidHJgAgmTjOEEzwu1L8.ttf) format('truetype')}@font-face{font-family:Roboto;font-style:italic;font-weight:500;src:local('Roboto Medium Italic'),local('Roboto-MediumItalic'),url(https://fonts.gstatic.com/s/roboto/v16/OLffGBTaF0XFOW1gnuHF0YbN6UDyHWBl620a-IRfuBk.woff) format('woff'),url(https://fonts.gstatic.com/s/roboto/v16/OLffGBTaF0XFOW1gnuHF0TTOQ_MqJVwkKsUn0wKzc2I.woff2) format('woff2'),url(https://fonts.gstatic.com/s/roboto/v16/OLffGBTaF0XFOW1gnuHF0SwlidHJgAgmTjOEEzwu1L8.ttf) format('truetype')}
 body{font-family:Roboto,Arial,sans-serif;font-weight: 300;}
 .nengah{max-width:987px;margin:0 auto;padding: 20px 0;overflow: hidden;}
-.resik{clear:both}
+.resik{clear:both}.ting{height:0;width:0;overflow:hidden;position:absolute:top:0;left:0;}
 
 #endas{background:#fbfbfb;position:fixed;top:0;right:0;left:0;z-index: 99999;box-shadow:0 1px 7px #999;}header{float:left;max-width: 160px;width:100%;padding: 10px 18px;}.navi{float:right;}.navi input{display:none;}.navi ul{margin:0;padding:0}.navi li {display: inline-block; position: relative; z-index: 10;}.navi li a {text-transform: uppercase;font-size: 15px;font-weight:500;color: #777;display: block;padding:27px 20px 26px;text-decoration: none;}.navi li a:link,.menu li a:visited {color: #777;}.navi li a:hover{color: #444;}.navi li:before{content:'';height:4px;width:0;position:absolute;bottom:0;left:0;background:#ec1019;transition:all .4s ease-out}.navi li:hover:before{width:100%}
-#propil{position:relative;padding: 70px 0 0;}.propilbg{background-image: url(https://kencanabrebes.github.io/soundsystem/kencanasoundsystem%20.png);min-height:calc(100vh - 70px);background-attachment: fixed;background-position: center;background-repeat: no-repeat;background-size: cover;padding: 0;margin: 0;}.propiltek{position: absolute;bottom: 20%;left: 0;text-align: center;padding: 40px 20%;margin: 0;}.propiltek h2 {font-size: 50px;font-weight: 700;color: #f1f1f1;margin: 0 0 15px;line-height: 1.3;text-shadow: 1px 1px #191919;}.propiltek p {font-size: 24px;padding: 0;margin: 0;color: #f1f1f1;line-height: 1.5;text-shadow: 1px 1px #191919;}
+#propil{position:relative;padding: 70px 0 0;}.propilbg{background-image: url(https://kencanabrebes.github.io/soundsystem/kencanasoundsystem%20.png);min-height:calc(100vh - 70px);background-attachment: fixed;background-position: center;background-repeat: no-repeat;background-size: cover;padding: 0;margin: 0;}.propiltek{position: absolute;bottom: 20%;left: 0;text-align: center;padding: 40px 20%;margin: 0;}.propiltek p {font-size: 50px;font-weight: 700;color: #f1f1f1;margin: 0 0 15px;line-height: 1.3;text-shadow: 1px 1px #191919;}.propiltek span {font-size: 24px;padding: 0;margin: 0;color: #f1f1f1;line-height: 1.5;text-shadow: 1px 1px #191919;}
 
 #layanan{margin:-70px 0 0;padding:70px 0 0;min-height:calc(100vh - 70px)}
 #layanan h2 {font-size: 30px;text-align: center;color: #555;line-height: 1.3;font-weight: 700;margin: 0 0 15px;}
@@ -73,13 +73,13 @@ header {max-width: 96px;padding: 10px;}
 .navi li a {font-size: 11px;padding:19px 5px 18px;}
 #propil {padding: 50px 0 0;}
 .propiltek {padding: 40px 5%;bottom: 10%;}
-.propiltek h2 {line-height: 1.1;}
-.propiltek p {line-height: 1.3;}
+.propiltek p {line-height: 1.1;}
+.propiltek b {line-height: 1.3;}
 .propilbg {min-height: calc(100vh - 50px);}
 .nengah {padding: 20px 5px;}
 #layanan {min-height: auto;margin: -50px 0 0;padding: 50px 0 0;}
-#layanan h2 {margin: 0 0 5px;}
-#layanan h3 {line-height: 1;margin: 0 0 10px;}
+#layanan p {margin: 0 0 5px;}
+#layanan b {line-height: 1;margin: 0 0 10px;}
 .layanan {width: calc(50% - 10px);margin: 5px;}
 .layanan p {margin: 10px;}
 footer {padding: 10px;}
@@ -98,13 +98,25 @@ footer {padding: 10px;}
 <li><a href='#lokasi' title='Lokasi'>Alamat</a></li>
 </ul></nav></div>
 </div>
-  
-<div id='propil'><div class='propilbg'></div><div class='propiltek'><h2>KENCANA Sound System</h2><p>Jasa Penyewaan Sound System, Panggung, Lighting, Perlengkapan Hajatan Dan Pengantin - Wilayah Kabupaten Brebes.</p></div></div>
 
+<div class='ting'><h1>Jasa Sewa/Penyewaan Sound System Gantung/Hajatan/Pernikahan / untuk Konser | Murah</h1>
+<p>Kencana sound system hadir untuk menawarkan jasa sewa sound system wilayah brebes dengan harga murah, jasa sewa sound system kami berkualitas dan insyaAllah tidak akan mengecewakan customer. Jasa sewa  sound system brebes kami dapat digunakan untuk berbagai keperluan, seperti konser music, pengajian dan hajatan.<p>
+<p>Sewa sound system Kencana kami sangat mengutamakan sekali terhadap kualitas suara yang dihasilkan, karena kami berharap agar customer dari Jasa penyewaan sound syatem KENCANA Brebes ini tidak akan kecewa. KENCANA brebes Penyewaan Sound system mempunyai bermacam model diantaranya Sound system gantung, sound system hajatan, sound system pernikahan dan sound system untuk konser.</p>
+</div>
+  
+<div id='propil'><div class='propilbg'></div><div class='propiltek'><p>KENCANA Sound System</p><b>Jasa Penyewaan Sound System, Panggung, Lighting, Perlengkapan Hajatan Dan Pengantin - Wilayah Kabupaten Brebes.</b></div></div>
+
+<div class='ting'>
+<h2>Sewa Sound System Murah</h2>
+<p>Kami menawarkan jasa sewa sound system murah tetapi dengan kualitas tidak murahan, dengan harga terjangkau yang berani bersaing kualitas dan harga dengan sound system lain yang ada di wilayah brebes, bukan sombong tetapi ini hanya promo dengan harga miring :p</p>
+<h3>Harga Sewa Sound System Gantung</h3>
+<p>Dengan model  terbaru yaitu sound system gantung, kami akan memberikan harga sewa sound system gantung yang sangat terjangkau untuk berbagai kalangan dan berbagai keperluan seperi hajatan, pernikahan , pengajian dan konser.</p>
+</div>
+  
 <div id='layanan'>
 <div class='nengah'>
-<h2>Layanan Kami</h2>
-<h3>Pilih layanan dan Biarkan kami yang mengurus semuanya.</h3>
+<p>Layanan Kami</p>
+<b>Pilih layanan dan Biarkan kami yang mengurus semuanya.</b>
 <div class='resik'></div>
 <div class='layanan'>
 <amp-img noloading='' src='https://kencanabrebes.github.io/soundsystem/soundsystem-kencana.jpg' width='336' height='224' layout='responsive'></amp-img>
@@ -125,6 +137,13 @@ footer {padding: 10px;}
 </div>
 </div>
 
+<div class='ting'>
+<h4>Harga Sewa Sound System Hajatan</h4>
+<p>Untuk berbagai kalangan pun kami memberikan harga dan kualitas yang baik, harga sewa sound system hajatan mialnya, kami memberikan paket komplit seperti tenda/layos kursi peralatan makan(prasmanan) penerangan dan sebagainya, tentunya dengan harga pas untuk wilayah brebes.</p>
+<h5>harga sewa sound system untuk konser</h5>
+<p>Untuk even besarpun kami sanggup memberikan  dan memenuhi standard kualitas sound system yang baik, seperti harga sewa sound system untuk konser  kami berikan harga murah se wilayah brebes.</p>
+</div>
+  
 <footer>Copyright © 2018 | <a href='https://kencanabrebes.github.io/soundsystem/' title='KENCANA Sound System'>KENCANA Sound System</a></footer>
   
 </body>
