--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@ body{font-family:Roboto,Arial,sans-serif;font-weight: 300;}
 .resik{clear:both}.ting{height:0;width:0;overflow:hidden;position:absolute:top:0;left:0;}
 
 #endas{background:#fbfbfb;position:fixed;top:0;right:0;left:0;z-index: 99999;box-shadow:0 1px 7px #999;}header{float:left;max-width: 160px;width:100%;padding: 10px 18px;}.navi{float:right;}.navi input{display:none;}.navi ul{margin:0;padding:0}.navi li {display: inline-block; position: relative; z-index: 10;}.navi li a {text-transform: uppercase;font-size: 15px;font-weight:500;color: #777;display: block;padding:27px 20px 26px;text-decoration: none;}.navi li a:link,.menu li a:visited {color: #777;}.navi li a:hover{color: #444;}.navi li:before{content:'';height:4px;width:0;position:absolute;bottom:0;left:0;background:#ec1019;transition:all .4s ease-out}.navi li:hover:before{width:100%}
-#propil{position:relative;padding: 70px 0 0;}.propilbg{background-image: url(https://kencanabrebes.github.io/soundsystem/kencanasoundsystem%20.png);min-height:calc(100vh - 70px);background-attachment: fixed;background-position: center;background-repeat: no-repeat;background-size: cover;padding: 0;margin: 0;}.propiltek{position: absolute;bottom: 20%;left: 0;text-align: center;padding: 40px 20%;margin: 0;}.propiltek p {font-size: 50px;font-weight: 700;color: #f1f1f1;margin: 0 0 15px;line-height: 1.3;text-shadow: 1px 1px #191919;}.propiltek span {font-size: 24px;padding: 0;margin: 0;color: #f1f1f1;line-height: 1.5;text-shadow: 1px 1px #191919;}
+#propil{position:relative;padding: 70px 0 0;}.propilbg{background-image: url(https://kencanabrebes.github.io/soundsystem/kencanasoundsystem%20.png);min-height:calc(100vh - 70px);background-attachment: fixed;background-position: center;background-repeat: no-repeat;background-size: cover;padding: 0;margin: 0;}.propiltek{position: absolute;bottom: 20%;left: 0;text-align: center;padding: 40px 20%;margin: 0;}.propiltek p {font-size: 50px;font-weight: 700;color: #f1f1f1;margin: 0 0 15px;line-height: 1.3;text-shadow: 1px 1px #191919;}.propiltek b {font-size: 24px;padding: 0;margin: 0;color: #f1f1f1;line-height: 1.5;text-shadow: 1px 1px #191919;}
 
 #layanan{margin:-70px 0 0;padding:70px 0 0;min-height:calc(100vh - 70px)}
-#layanan h2 {font-size: 30px;text-align: center;color: #555;line-height: 1.3;font-weight: 700;margin: 0 0 15px;}
-#layanan h3 {font-size: 18px;color: #777;line-height: 1.5;font-weight: 500;margin: 0 0 25px;text-align: center;}
+#layanan p {font-size: 30px;text-align: center;color: #555;line-height: 1.3;font-weight: 700;margin: 0 0 15px;}
+#layanan b {font-size: 18px;color: #777;line-height: 1.5;font-weight: 500;margin: 0 0 25px;text-align: center;}
 .layanan{float:left; width:calc(25% - 20px);margin:10px;box-shadow:0 1px 3px #ddd;overflow:hidden;border-radius:3px;}
 .layanan amp-img{width:100%;height:auto;}
 .layanan p{text-align: center;font-weight: 400;}
@@ -119,19 +119,19 @@ footer {padding: 10px;}
 <b>Pilih layanan dan Biarkan kami yang mengurus semuanya.</b>
 <div class='resik'></div>
 <div class='layanan'>
-<amp-img noloading='' src='https://kencanabrebes.github.io/soundsystem/soundsystem-kencana.jpg' width='336' height='224' layout='responsive'></amp-img>
+<amp-img noloading='' alt='Jasa Sewa/Penyewaan Sound System Gantung/Hajatan/Pernikahan / untuk Konser | Murah' src='https://kencanabrebes.github.io/soundsystem/soundsystem-kencana.jpg' width='336' height='224' layout='responsive'></amp-img>
 <p>Sound System</p>
 </div>
 <div class='layanan'>
-<amp-img noloading='' src='https://kencanabrebes.github.io/soundsystem/panggung-kencana.jpg' width='336' height='224' layout='responsive'></amp-img>
+<amp-img noloading='' alt='Jasa Sewa/Penyewaan Sound System Gantung/Hajatan/Pernikahan / untuk Konser | Murah' src='https://kencanabrebes.github.io/soundsystem/panggung-kencana.jpg' width='336' height='224' layout='responsive'></amp-img>
 <p>Panggung</p>
 </div>
 <div class='layanan'>
-<amp-img noloading='' src='https://kencanabrebes.github.io/soundsystem/lighting-kencana.jpg' width='336' height='224' layout='responsive'></amp-img>
+<amp-img noloading='' alt='Jasa Sewa/Penyewaan Sound System Gantung/Hajatan/Pernikahan / untuk Konser | Murah' src='https://kencanabrebes.github.io/soundsystem/lighting-kencana.jpg' width='336' height='224' layout='responsive'></amp-img>
 <p>Lighting</p>
 </div>
 <div class='layanan'>
-<amp-img noloading='' src='https://kencanabrebes.github.io/soundsystem/tendalayos-kencana.jpg' width='336' height='224' layout='responsive'></amp-img>
+<amp-img noloading='' alt='Jasa Sewa/Penyewaan Sound System Gantung/Hajatan/Pernikahan / untuk Konser | Murah' src='https://kencanabrebes.github.io/soundsystem/tendalayos-kencana.jpg' width='336' height='224' layout='responsive'></amp-img>
 <p>Tenda/Layos</p>
 </div>
 </div>
