--- a/index.html
+++ b/index.html
@@ -66,6 +66,40 @@ body{font-family:Roboto,Arial,sans-serif;font-weight: 300;color:#777;}
 .layanan amp-img{width:100%;height:auto;}
 .layanan p{text-align: center;font-weight: 400;}
   
+  #telepon{background-image: url(https://4.bp.blogspot.com/-xqqdwjgXvN4/WbynHcwc_XI/AAAAAAAAssE/D__mCmDQOUAq1kJxhqp-ar8P8iXX9dHyACLcBGAs/s1600/coffee-keyboard-laptop-macbook.jpeg);
+    height: 300px;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    text-align: center;
+    padding: 0 40px;
+    margin: 0;
+    position: relative;}
+  #telepon:before {
+    content: "";
+    background-color: rgba(0,0,0,.3);
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 1;
+}
+  .tlepong{width: 100%;
+    position: absolute;
+    top: 50px;
+    left: 0;
+    z-index: 2;}
+  #telepon p {
+    font-size: 30px;
+    color: #fff;
+    text-shadow: 1px 1px #191919;
+    margin: 0 0 30px;
+}
+  .tlepong b{}
+  
+  
 footer{background: #222;text-align: center;color: #777;padding: 20px;font-size: 12px;}footer a:link,footer a:visited{text-decoration:none;color:#777}footer a:hover{color:#999}
 
 @media screen and (max-width: 1005px){
@@ -138,6 +172,23 @@ footer {padding: 10px;}
 </div>
 </div>
 
+<div id='telepon'>
+<div class='tlepong'>
+<p>Hubungi Kami Sekarang Juga</p>
+<a href="tel:+6281312815XXX" title="Order via Telepon">
+<svg height="100" viewBox="0 0 512 512" width="100">
+<rect fill="#7b519d" height="512" rx="100" ry="100" width="512"></rect>
+<g fill="#fff">
+<path d="M421.915 345.457c-12.198-9.82-25.233-18.634-38.064-27.638-25.59-17.973-48.996-19.37-68.091 9.546-10.723 16.234-25.734 16.945-41.43 9.823-43.27-19.62-76.683-49.85-96.255-93.83-8.658-19.458-8.544-36.903 11.713-50.665 10.725-7.278 21.53-15.89 20.666-31.793-1.128-20.736-51.475-90.033-71.357-97.347-8.227-3.027-16.42-2.83-24.79-.017-46.62 15.678-65.93 54.019-47.437 99.417 55.17 135.442 152.26 229.732 285.91 287.282 7.62 3.277 16.085 4.587 20.371 5.763 30.428.306 66.073-29.01 76.367-58.104 9.911-27.99-11.035-39.1-27.603-52.437zM272.06 77.439c97.707 15.025 142.768 61.485 155.21 159.895 1.154 9.09-2.232 22.768 10.737 23.02 13.554.259 10.288-13.217 10.402-22.316 1.146-92.684-79.669-178.606-173.524-181.774-7.081 1.019-21.733-4.883-22.647 10.988-.609 10.7 11.727 8.942 19.822 10.187z"></path>
+<path d="M291.172 104.422c-9.398-1.132-21.805-5.56-24.001 7.48-2.293 13.687 11.535 12.297 20.42 14.286 60.346 13.487 81.358 35.451 91.294 95.311 1.451 8.727-1.432 22.31 13.399 20.059 10.991-1.674 7.021-13.317 7.94-20.118.487-57.47-48.758-109.778-109.052-117.018z"></path>
+<path d="M296.713 151.416c-6.273.155-12.43.834-14.736 7.538-3.463 10.02 3.822 12.409 11.237 13.6 24.755 3.974 37.783 18.571 40.256 43.257.668 6.7 4.92 12.129 11.392 11.365 8.969-1.07 9.78-9.053 9.505-16.634.443-27.734-30.904-59.79-57.654-59.126z"></path>
+</g>
+</svg>
+<b>+62865478XXX</b>
+</a>
+</div>
+</div>
+  
 <div class='ting'>
 <h4>Harga Sewa Sound System Hajatan</h4>
 <p>Untuk berbagai kalangan pun kami memberikan harga dan kualitas yang baik, harga sewa sound system hajatan mialnya, kami memberikan paket komplit seperti tenda/layos kursi peralatan makan(prasmanan) penerangan dan sebagainya, tentunya dengan harga pas untuk wilayah brebes.</p>
