--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ body{font-family:Roboto,Arial,sans-serif;font-weight: 300;color:#777;}
     text-shadow: 1px 1px #191919;
     margin: 0 0 30px;
 }
-  .telpong a:link,.telpong a:visited{display: block;
+  .tlepong a:link,.tlepong a:visited{display: block;
     line-height: 1em;
     color: #ed1a23;
     text-shadow: 1px 1px #fbfbfb;}
