--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@ body{font-family:Roboto,Arial,sans-serif;font-weight: 300;color:#777;}
 .layanan{float:left; width:calc(25% - 20px);margin:10px;box-shadow:0 1px 3px #ddd;overflow:hidden;border-radius:3px;}
 .layanan amp-img{width:100%;height:auto;}
 .layanan p{text-align: center;font-weight: 400;}
-  
+
+#phone{margin:-70px 0 0}
 #telepon{background-image: url(https://4.bp.blogspot.com/-xqqdwjgXvN4/WbynHcwc_XI/AAAAAAAAssE/D__mCmDQOUAq1kJxhqp-ar8P8iXX9dHyACLcBGAs/s1600/coffee-keyboard-laptop-macbook.jpeg);height: 300px;background-attachment: fixed;background-position: center;background-repeat: no-repeat;background-size: cover;text-align: center;padding: 0 40px;margin: 0;position: relative;}
 #telepon:before {content: "";background-color: rgba(0,0,0,.3);position: absolute;top: 0;left: 0;bottom: 0;right: 0;z-index: 1;}
 .tlepong{width: 100%;position: absolute;top: 50px;left: 0;z-index: 2;}
@@ -105,6 +106,7 @@ footer {padding: 10px;}
 <div class='navi'><input class='ngimput' type='checkbox'></input><span></span><nav><ul>                                                       
 <li><a href='#propil' title='Profil KENCANA Sound System'>Profil</a></li>
 <li><a href='#layanan' title='Layanan Kami'>Layanan</a></li>
+<li><a href='#phone' title='Hubungi Kami'>Telepon</a></li>
 <li><a href='#lokasi' title='Lokasi'>Alamat</a></li>
 </ul></nav></div>
 </div>
@@ -147,6 +149,7 @@ footer {padding: 10px;}
 </div>
 </div>
 
+<div id='phone'>
 <div id='telepon'>
 <div class='tlepong'>
 <p>Hubungi Kami Sekarang Juga</p>
@@ -156,6 +159,7 @@ footer {padding: 10px;}
 <path d="M296.713 151.416c-6.273.155-12.43.834-14.736 7.538-3.463 10.02 3.822 12.409 11.237 13.6 24.755 3.974 37.783 18.571 40.256 43.257.668 6.7 4.92 12.129 11.392 11.365 8.969-1.07 9.78-9.053 9.505-16.634.443-27.734-30.904-59.79-57.654-59.126z"></path></g></svg>
 <b>+62865478XXX</b>
 </a>
+</div>
 </div>
 </div>
   
