--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ body{font-family:Roboto,Arial,sans-serif;font-weight: 300;color:#777;}
 .layanan p{text-align: center;font-weight: 400;}
 
 #phone{margin:-70px 0 0}
-#telepon{background-image: url(https://4.bp.blogspot.com/-xqqdwjgXvN4/WbynHcwc_XI/AAAAAAAAssE/D__mCmDQOUAq1kJxhqp-ar8P8iXX9dHyACLcBGAs/s1600/coffee-keyboard-laptop-macbook.jpeg);height: 300px;background-attachment: fixed;background-position: center;background-repeat: no-repeat;background-size: cover;text-align: center;padding: 0 40px;margin: 0;position: relative;}
+#telepon{background-image: url(https://kencanabrebes.github.io/soundsystem/tendalayos_contact.png);height: 300px;background-attachment: fixed;background-position: center;background-repeat: no-repeat;background-size: cover;text-align: center;padding: 0 40px;margin: 0;position: relative;}
 #telepon:before {content: "";background-color: rgba(0,0,0,.3);position: absolute;top: 0;left: 0;bottom: 0;right: 0;z-index: 1;}
 .tlepong{width: 100%;position: absolute;top: 50px;left: 0;z-index: 2;}
 #telepon p {font-size: 30px;color: #fff;text-shadow: 1px 1px #191919;margin: 0 0 30px;}
