--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@ body{font-family:Roboto,Arial,sans-serif;font-weight: 300;color:#777;}
 .layanan amp-img{width:100%;height:auto;}
 .layanan p{text-align: center;font-weight: 400;}
 
-#phone{margin:-70px 0 0}
+#phone{margin:-70px 0 0;padding: 70px 0 0;}
 #telepon{background-image: url(https://kencanabrebes.github.io/soundsystem/tendalayos_contact.png);height: 300px;background-attachment: fixed;background-position: center;background-repeat: no-repeat;background-size: cover;text-align: center;padding: 0 40px;margin: 0;position: relative;}
-#telepon:before {content: "";background-color: rgba(0,0,0,.3);position: absolute;top: 0;left: 0;bottom: 0;right: 0;z-index: 1;}
+#telepon:before {content: "";background-color: rgba(0,0,0,.2);position: absolute;top: 0;left: 0;bottom: 0;right: 0;z-index: 1;}
 .tlepong{width: 100%;position: absolute;top: 50px;left: 0;z-index: 2;}
 #telepon p {font-size: 30px;color: #fff;text-shadow: 1px 1px #191919;margin: 0 0 30px;}
 .tlepong a:link,.tlepong a:visited{display: block;line-height: 1em;color: #ed1a23;text-shadow: 1px 1px #fbfbfb;}
